--- a/submissions/linkqwd/task-6_js-dom/sass/styles.scss
+++ b/submissions/linkqwd/task-6_js-dom/sass/styles.scss
@@ -23,7 +23,7 @@ body {
 .action-menu {
 	display: flex;
 	flex-wrap: wrap;
-	background: #f1f1f1;
+	background: #fbfaf6;
 	padding: 20px;
 	border-radius: 3px;
 	box-shadow: 1px 1px 5px 1px rgba(0,0,0, .2);
@@ -49,6 +49,7 @@ body {
 	box-sizing: border-box;
 	background: #f7f7f7;
 	transition: background 225ms;
+	list-style: none; 
 	cursor: pointer; 
 
 	&:last-child {
@@ -77,7 +78,7 @@ body {
 		top: 0;
 		bottom: 0;
 		right: -1px;
-		width: 1px;
+		width: 3px;
 		background: #fff;
 		z-index: 15;
 	}
@@ -132,4 +133,9 @@ body {
 	float: right;
 	padding: 10px 10px 20px 20px;
 	max-width: 180px;
+
+	@include media(600px) {
+		max-width: 120px;
+		padding: 5px;
+	}
 }
