changing event handler to eventDelegation

--- a/submissions/linkqwd/task-6_js-dom/css/styles.css
+++ b/submissions/linkqwd/task-6_js-dom/css/styles.css
@@ -192,7 +192,7 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  right: -1px;
+  right: -2px;
   width: 3px;
   background: #fff;
   z-index: 15;
@@ -268,3 +268,4 @@ body {
     padding: 5px;
   }
 }
+/*# sourceMappingURL=styles.css.map */
