--- a/submissions/igkos/js-dom/style.css
+++ b/submissions/igkos/js-dom/style.css
@@ -41,13 +41,15 @@ ul {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .header__title {
     font-weight: 300;
     font-size: 3em;
     margin: 0.75em 0.25em;
-    color: #212121;
+    color: #262326;
     text-align: center;
 }
 
@@ -59,6 +61,7 @@ ul {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    background-color: #262326;
 }
 
 .nav__list {
@@ -75,17 +78,16 @@ ul {
     line-height: 24px;
     padding: 24px;
     text-transform: uppercase;
+    color: #9e849d;
 }
 
 .nav a {
     text-decoration: none;
-    color: #616161;
     padding: 1.5em;
 }
 
 .nav__item:hover {
-    text-decoration: underline;
-    color: #212121;
+    color:#ff9800;
     cursor: pointer;
     font-weight: bold;
 }
@@ -181,14 +183,14 @@ footer a {
     }
 }
 
-@media screen and (min-width: 611px) {
+@media screen and (min-width: 695px) {
     .hero {
         order: 0;
         width: 100%;
     }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 750px) {
     .hero {
         width: 40%;
     }
