--- a/submissions/IrynaY/memory-pare-game/style.css
+++ b/submissions/IrynaY/memory-pare-game/style.css
@@ -1,65 +1,27 @@
-td {
-    /* background-color: #eeccee; */
-}
-
-img {
-    width: 200px;
-    height: 200px;
+img, .back, td {
+    width: 150px;
+    height: 150px;
 }
 
 table {
-    margin: 55px auto;
+    margin: auto;
 }
 
-/* 
-.show{
-    transform: rotateY(180deg);
-	transition: 0.5s;
-	transform-style: preserve-3d;
-}
-
-.back {
-	backface-visibility: hidden;
-    transform: rotateY(180deg);
-    
-} */
-/* entire container, keeps perspective */
 .flip-container {
-	perspective: 1000px;
-}
-.show {
-/* .flip-container:hover .flipper, .flip-container.hover .flipper { */
-    transform: rotateY(180deg);
-}
-
-.flip-container, .front, .back {
-	width: 200px;
-	height: 200px;
-}
-
-.flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-    position: relative;
-    width: 200px;
-	height: 200px;
+	position: relative;
 }
 
-.front, .back {
+.back{
+	background-color: #eeccee;
+}
+
+.front, .back{
 	backface-visibility: hidden;
-    /* background-color: #ffffff; */
 	position: absolute;
-	top: 0;
-	left: 0;
 }
 
-.front {
-	z-index: 2;
-    /* for firefox 31 */
-    background-color: #eeccee;
-    
-	transform: rotateY(0deg);
-}
-.back {
+.flip{
 	transform: rotateY(180deg);
 }
