--- a/submissions/webdevagent/js-dom/style.css
+++ b/submissions/webdevagent/js-dom/style.css
@@ -66,10 +66,6 @@ a:hover {
 .description{
   display: none;
 }
-.first{
-  display: block;
-}
-
 
 @media (max-width:880px) {
   .description {
@@ -97,3 +93,10 @@ a:hover {
 
     }
 }}
+.selected {
+  background-color: white;
+}
+
+.showTab {
+  display: block;
+}
