fix some bugs and implement recommendations

--- a/submissions/Aldegid/js-dom/sass/_mixins/_font-face.sass
+++ b/submissions/Aldegid/js-dom/sass/_mixins/_font-face.sass
@@ -6,7 +6,7 @@
 
 		@if $asset-pipeline == true 
 			src: font-url('#{$file-path}.eot')
-			src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff') format('woff'), font-url('#{$file-path}.ttf') format('truetype')
+			src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff') format('woff'), font-url('#{$file-path}.woff2') format('woff2'), font-url('#{$file-path}.ttf') format('truetype')
 		@else
 			src: url('#{$file-path}.eot')
-			src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'), url('#{$file-path}.woff') format('woff'), url('#{$file-path}.ttf') format('truetype')
+			src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'), url('#{$file-path}.woff') format('woff'), url('#{$file-path}.woff2') format('woff2') url('#{$file-path}.ttf') format('truetype')
