--- a/submissions/SergSenras/js-dom/style.css
+++ b/submissions/SergSenras/js-dom/style.css
@@ -14,11 +14,11 @@ body, html {
 .content{
   margin-bottom: 20px;
 }
-a{
+.link{
   color: #000;
   text-decoration: none;
 }
-ul li{
+.nav__list .nav__item{
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -36,7 +36,7 @@ ul li{
   margin: 15px auto;
   text-align: center;
 }
-.header__menu img{
+.header__menu .img__logo{
   position: absolute;
   width: 25px;
   height: 25px;
@@ -55,7 +55,7 @@ ul li{
 .nav__list .nav__item{
   padding: 5px;
 }
-.nav__item a{
+.nav__item .link{
   display: block;
   padding: 5px;
 }
@@ -72,7 +72,7 @@ ul li{
 .item__box:last-child{
   border: none;
 }
-.item__box img{
+.item__box .img__common{
   float: left;
   margin: 15px 15px 10px 0;
 }
@@ -119,7 +119,7 @@ ul li{
   .header__title{
     font-size: 3em;
   }
-  .header__menu img{
+  .header__menu .img__common{
     display: none;
   }
   .nav__list{
