--- a/submissions/IrynaY/memory-pare-game/style.css
+++ b/submissions/IrynaY/memory-pare-game/style.css
@@ -1,27 +1,63 @@
-img, .back, td {
-    width: 150px;
-    height: 150px;
+#field{
+	width: 670px;
+	height: 500px;	
+	margin: 35px auto;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-table {
-    margin: auto;
+.flip {
+	transform: rotateY(180deg);
 }
 
-.flip-container {
-	transition: 0.6s;
+img, .flipper, .front, .back {
+	width: 160px;
+	height: 160px;
+}
+
+.flipper {
+	transition: 0.2s;
 	transform-style: preserve-3d;
 	position: relative;
+	margin: 3px;
 }
 
-.back{
-	background-color: #eeccee;
-}
-
-.front, .back{
+.front, .back {
 	backface-visibility: hidden;
 	position: absolute;
 }
 
-.flip{
+.front {
+	z-index: 2;
+	transform: rotateY(0deg);
+	border: 1px solid green;
+	border-radius: 10px;
+}
+
+.back {
 	transform: rotateY(180deg);
+}
+
+.hide{
+	opacity: .1;
+}
+
+#restart{
+	width: 200px;
+	height: 60px;
+	background-color: greenyellow;
+	font-weight: bold;
+	position: relative;
+	font-size: 20px;
+}
+
+.ho{
+	margin: 200px auto;
+	text-align: center
+}
+
+p{
+	font-size: 30px;
+	color: red;
+	font-weight: bold;
 }
