--- a/submissions/babayK0/js-dom/css/style.css
+++ b/submissions/babayK0/js-dom/css/style.css
@@ -1,107 +1,88 @@
-
 *, *:after, *:before {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
-
-li{
-	list-style: none;
+li {
+    list-style: none;
 }
-
-body{
-	font-family: 'Bitter', 'Arial', serif;
-	font-size: 14px;
-	line-height: 1.25;
-	color: #000;
-	background-color: #b27630;
-	background-image: url('../img/bg.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
- 	background-size: cover;
+body {
+    font-family: 'Bitter', 'Arial', serif;
+    font-size: 14px;
+    line-height: 1.25;
+    color: #000;
+    background-color: #b27630;
+    background-image: url('../img/bg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-
-.container{
-	max-width: 75%;
-	background-color: #fcc373;
-	margin: 20px auto;
-	border:solid #000 1px;
+.container {
+    max-width: 75%;
+    background-color: #fcc373;
+    margin: 20px auto;
+    border: solid #000 1px;
 }
-
-.menu{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 5% auto;
-	grid-template-areas: 
-						"h h h h"
-						"n i i i";
+.menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 5% auto;
+    grid-template-areas: "h h h h" "n i i i";
 }
-
-.header{
-	margin-top: auto;
-	margin-bottom: 0;
-	padding-left: 10px;
-	padding-bottom: 15px;
-	border-bottom: solid #000 1px;
-	grid-area: h;
+.header {
+    margin-top: auto;
+    margin-bottom: 0;
+    padding-left: 10px;
+    padding-bottom: 15px;
+    border-bottom: solid #000 1px;
+    grid-area: h;
 }
-
-.nav{
-	margin:50px  5px 0 15px;
-	text-align: center;
-	grid-area:n;	
+.nav {
+    margin: 50px 5px 0 15px;
+    text-align: center;
+    grid-area: n;
 }
- .nav-item{
-	margin:5px 0 25px;
-	padding: 5px;
-	border-bottom: solid 1px;
-	cursor: pointer;
-} 
-.nav-item_active{
-	color:#ec4e4e;
+.nav-item {
+    margin: 5px 0 25px;
+    padding: 5px;
+    border: solid 1.5px;
+    cursor: pointer;
 }
-
-.info{
-	margin: 50px;
-	text-align: justify;
-	grid-area:i;
+.nav-item_active {
+    color: #ec4e4e;
 }
-
-.info-item{
-	display:none;
+.info {
+    margin: 50px;
+    text-align: justify;
+    grid-area: i;
 }
-
-.info-item_active{
-	margin: 5px;
+.info-item {
+    display: none;
 }
-
-.img{
-	margin-left:15px; 
-	float:right;
-	max-width:300px;
-	grid-area: i;
+.info-item_active {
+    margin: 5px;
 }
-
-.emblem{
-	width: 100%;
+.img {
+    margin-left: 15px;
+    float: right;
+    max-width: 300px;
+    grid-area: i;
 }
-
-@media screen and (max-width: 600px){
-	.menu{
-		grid-template-areas: 
-							"h h h h"
-							"n n n n"
-			        		"i i i i";
-  }
+.emblem {
+    width: 100%;
 }
-@media screen and (max-width: 540px){
-  .img{
-		max-width:200px;
-	}
+@media screen and (max-width: 600px) {
+    .menu {
+        grid-template-areas: "h h h h" "n n n n" "i i i i";
+    }
 }
-@media screen and (max-width: 399px){
-  .img{
-		max-width:150px;
-	}
+@media screen and (max-width: 540px) {
+    .img {
+        max-width: 200px;
+    }
 }
-
+@media screen and (max-width: 399px) {
+    .img {
+        max-width: 150px;
+    }
+}
