--- a/submissions/AlinaLadybug/DOM/side-menu/css/style.css
+++ b/submissions/AlinaLadybug/DOM/side-menu/css/style.css
@@ -7,19 +7,17 @@ body{
     padding: 0px;
     margin: 0px;
 }
-nav{
+#menu-wrapper{
     display: block;
-    position: relative;
     background-color: #f0f4ff;
     border-right: 1px solid black;
     text-align: center;
     width:100px;
-    flex:0 0 100px;
-    height: 100vh;
-    float: left;
+    position: fixed;
+    height: 100%;
 }
 
-nav ul{
+#menu-wrapper ul{
     height: 50%;
     list-style:none;
     margin:auto 0;
@@ -29,20 +27,20 @@ nav ul{
     justify-content: space-between;
     flex-direction: column;
 }
-nav ul li {
+#menu-wrapper ul li {
     height: 100%;
     display: flex;
     justify-content:center;
     align-items:center;
 }
-nav ul li img{
+#menu-wrapper ul li img{
     width:40px;
     height: 40px;
 }
-nav ul li:hover{
+#menu-wrapper ul li:hover{
     cursor: pointer;
 }
-nav ul li:hover:not(.active){
+#menu-wrapper ul li:hover:not(.active){
     background-color: rgba(0, 0, 0, 0.8);
 }
 .tooltiptext {
@@ -59,7 +57,7 @@ nav ul li:hover:not(.active){
     left: 105%;
     font-size: 10px;
   }
-nav ul li:hover .tooltiptext{
+#menu-wrapper ul li:hover .tooltiptext{
     visibility: visible;
 }
 #content-wrapper{
@@ -70,7 +68,7 @@ nav ul li:hover .tooltiptext{
 }
 
 @media screen and (max-width: 700px) {
-    nav {
+    #menu-wrapper {
       width: 100%;
       height: auto;
       position: relative;
@@ -79,13 +77,13 @@ nav ul li:hover .tooltiptext{
     .tooltiptext{
         display: none;
     }
-    nav ul{
+    #menu-wrapper ul{
       width: 100%;
       display: flex;
       justify-content: space-between;
       flex-direction: row;
     }
-    nav ul li
+    #menu-wrapper ul li
     {
         width: 100%;
         float: left;
@@ -97,12 +95,12 @@ nav ul li:hover .tooltiptext{
     }
   }
 
-  @media screen and (max-width: 400px) {
-    nav ul li {
+  @media screen and (max-width: 500px) {
+    #menu-wrapper ul li {
       text-align: center;
       float: none;
     }
-    nav ul{
+    #menu-wrapper ul{
       width: auto;
       display: block;
     }
@@ -113,9 +111,10 @@ nav ul li:hover .tooltiptext{
     background-color:rgba(0, 0, 0, 1);
 }
 
-#content-wrapper div{
+#content-wrapper>div:not(.active-content){
     text-align: justify;
     width:100%;
+    display:none;
     
 }
 
@@ -133,5 +132,9 @@ nav ul li:hover .tooltiptext{
 }
 p,br{
     text-indent: 20px;
+}
+
+.active-content{
+    display: block;
 }
 
